--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 
         <p>Oferecemos profissionais experientes e antenados às mudanças no mundo do esporte. 
         O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
-    </body> o produto via onlline chega a curto prazo e com muita qualidade
+        <p>produto via onlline chega a curto prazo e com muita qualidade </p> 
 
-    <img id="banner" src="esportes.webp">
+    <img id="banner" src="https://s1.static.brasilescola.uol.com.br/be/conteudo/images/alguns-esportes-dependem-equipamentos-para-serem-praticados-5734865673029.jpg">
+</body>
 </html>
